# oboete

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  dev.mariinkys.Oboete.json  justfile
i18n/cs/: oboete.ftl
i18n/en/: oboete.ftl
i18n/es/: oboete.ftl
i18n/it/: oboete.ftl
i18n/nl/: oboete.ftl
i18n/pt-BR/: oboete.ftl
i18n/pt_BR/: oboete.ftl
i18n/sv/: oboete.ftl
info/: ANKI_IMPORTING.md
migrations/: 0001_init.sql
res/: dev.mariinkys.Oboete.desktop  dev.mariinkys.Oboete.metainfo.xml
resources/: app.desktop  app.metainfo.xml
resources/icons/bundled/: README.md
src/: app.rs  config.rs  flags.rs  flashcards.rs  folders.rs  i18n.rs  icons.rs  key_binds.rs  main.rs  models.rs  studysets.rs  utils.rs
src/app/: app_menu.rs  context_page.rs  core.rs  dialogs.rs  screen.rs  widgets.rs
src/app/core/: database.rs  models.rs  utils.rs
src/app/core/models/: flashcard.rs  folder.rs  studyset.rs
src/app/core/utils/: archive_manager.rs  flashcards.rs  fsrs_scheduler.rs  images.rs  toast.rs
src/app/screen/: flashcards.rs  folders.rs  study.rs
src/app/widgets/: pill.rs
src/core/: config.rs  database.rs  icon_cache.rs  key_bind.rs  localization.rs  mod.rs  settings.rs
src/oboete/: database.rs  mod.rs  utils.rs
src/oboete/models/: flashcard.rs  folder.rs  mod.rs  studyset.rs
src/oboete/pages/: folder_content.rs  homepage.rs  mod.rs  study_page.rs
