[package]
name = "oboete"
version = "0.1.7"
authors = ["mariinkys (Alex Marín)"]
edition = "2021"
description = "A simple flashcards application for the COSMIC™ desktop"
readme = "https://github.com/mariinkys/oboete/blob/main/README.md"
repository = "https://github.com/mariinkys/oboete"
license = "GPL-3.0"

[[bin]]
path = "src/main.rs"
name = "oboete"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.3"
open = "5.3.2"
rust-embed = "8.5.0"
tokio = { version = "1.43.0", features = ["full"] }

sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
futures = "0.3.31"
dirs = "6.0.0"
rand = "0.8.5"
ashpd = { version = "0.10.2", features = ["wayland"] }
percent-encoding = "2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
log = "0.4.25"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
paste = "1.0"
tracing = "0.1.40"

[dependencies.i18n-embed]
version = "0.15.3"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # About Page
    "about",
]


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
