[package]
name = "oboete"
version = "0.1.9"
authors = ["mariinkys (Alex Marín)"]
edition = "2024"
description = "A simple flashcards application for the COSMIC™ desktop"
readme = "https://github.com/mariinkys/oboete/blob/main/README.md"
repository = "https://github.com/mariinkys/oboete"
license = "GPL-3.0"

[[bin]]
path = "src/main.rs"
name = "oboete"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.4"
open = "5.3.2"
rust-embed = "8.7.2"
tokio = { version = "1.45.1", features = ["full"] }

# Added by me
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
futures = "0.3.31"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.1" #needed for flashcard selection
ashpd = { version = "0.11.0", features = ["wayland"] } #needed for file dialogs
percent-encoding = "2.3.1" #needed for correct anki file importing
serde_json = "1.0.140" #needed for file exporting and importing

[dependencies.i18n-embed]
version = "0.15.4"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # COSMIC About Page Support
    "about",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
