[package]
name = "oboete"
version = "0.2.3"
authors = ["mariinkys (Alex Marín)"]
edition = "2024"
description = "A flashcards application for the COSMIC™ desktop"
readme = "https://github.com/mariinkys/oboete/blob/main/README.md"
repository = "https://github.com/mariinkys/oboete"
license = "GPL-3.0"

[[bin]]
path = "src/main.rs"
name = "oboete"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.3"
rust-embed = "8.11.0"
tokio = { version = "1.49.0", features = ["full"] }

# Added by me
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
futures = "0.3.31"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2" #needed for flashcard selection
percent-encoding = "2.3.2" #needed for correct anki file importing
ron = "0.12.0"
uuid = { version = "1.20.0", features = ["v4"] }
anywho = "0.1.2"
fsrs = "5.2.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # About widget for the app
    "about",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
    # XDG portal integration for Flatpak theme detection
    "xdg-portal",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
# codegen-units = 1
# Do a second optimization pass over the entire program, including dependenc.
# Slows compile times, marginal improvements.
lto = "thin"
